--- a/style.css
+++ b/style.css
@@ -4,9 +4,23 @@
   box-sizing: border-box;
 }
 
+main {
+  flex-grow: 1; /* This will make the main content expand to fill available space */
+}
+
+html, body {
+  height: 100%; 
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 body {
   font-family: sans-serif;
   background-color: #f5f5f5;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh; 
 }
 
 header {
@@ -62,4 +76,5 @@ footer {
   color: #fff;
   padding: 20px;
   text-align: center;
+  margin-top: auto;
 }
